2012-06-22  Kenneth Russell  <kbr@google.com>

        Unreviewed, rolling out r121025.
        http://trac.webkit.org/changeset/121025
        https://bugs.webkit.org/show_bug.cgi?id=89580

        Caused crash in
        EventHandler.shouldTurnVerticalTicksIntoHorizontal webkit unit
        test on 10.7

        * page/EventHandler.cpp:
        (WebCore::EventHandler::shouldTurnVerticalTicksIntoHorizontal):
        (WebCore::EventHandler::handleWheelEvent):
        * page/EventHandler.h:
        (EventHandler):
        * page/chromium/EventHandlerChromium.cpp:
        (WebCore::EventHandler::shouldTurnVerticalTicksIntoHorizontal):
        * page/gtk/EventHandlerGtk.cpp:
        (WebCore::EventHandler::shouldTurnVerticalTicksIntoHorizontal):

2012-06-21  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: only increase length for timeline bars below minimal width
        https://bugs.webkit.org/show_bug.cgi?id=89727

        Reviewed by Pavel Feldman.

        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelineCalculator.prototype.computeBarGraphWindowPosition):
        (WebInspector.TimelineCalculator.prototype.setDisplayWindow):
        (WebInspector.TimelineRecordGraphRow.prototype.update):

2012-06-22  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX: FormController.cpp fails to build on 32-bit architectures

        This fixes the following build failure introduced in r121004 for
        Bug 89628:

            FormController.cpp:62:36: error: implicit conversion loses integer precision: 'uint64_t' (aka 'unsigned long long') to 'size_t' (aka 'unsigned long') [-Werror,-Wshorten-64-to-32]
                state.m_values.reserveCapacity(valueSize);
                ~~~~~                          ^~~~~~~~~

        * html/FormController.cpp:
        (WebCore::FormControlState::deserialize): Change type of
        valueSize from uint64_t to size_t.

2012-06-22  Abhishek Arya  <inferno@chromium.org>
