@@ -1,3 +1,10 @@
+2012-06-22  Andrey Kosyakov  <caseq@chromium.org>
+
+        Unreviewed follow-up to r121030, fix display of "Duration" in timeline event details popup.
+
+        * inspector/front-end/TimelinePresentationModel.js:
+        (WebInspector.TimelinePresentationModel.Record.prototype.generatePopupContent):
+
 2012-06-22  Kenneth Russell  <kbr@google.com>
 
         Unreviewed, rolling out r121025.
